--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div style="display: none;" class="night-mode">
                 <input type='checkbox' id='time' class="night-toggle"/>
                 <label for='time'>NIG</label>
-            </div>
+            </div><li><a href="./covid-19/">COVID 19</a></li>
             <li><a href="#home">HOME</a></li>
             <li class="unset-values one-nav arrowone">
             
