--- a/links/index.html
+++ b/links/index.html
@@ -13,6 +13,9 @@
     <div class="logo"><img src="../IMAGES/HOME/VR new logo.png" alt="Logo"></div>
     <div class="container">
         <div class="link-buttons">
+          <form action="../covid-19/">
+            <input class="button small" type="submit" value="COVID 19"/>
+          </form>
             <form action="https://youtu.be/vUrGiPGBkOY">
               <input class="button small" type="submit" value="ORIENTAION 2021"/>
             </form>
