--- a/careers/index.html
+++ b/careers/index.html
@@ -45,6 +45,66 @@
                    "https://twitter.com/RacingVelocita",
                    "https://www.youtube.com/velocitaracing"]
         }</script>
+
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Velocita Racing",
+                "item": "https://velocitaracing.github.io"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Careers",
+                "item": "https://velocitaracing.github.io/careers"
+              }
+            }
+        </script>
+
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "FAQPage",
+              "mainEntity": [{
+                "@type": "Question",
+                "name": "What does Velocita Racing do? ",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Velocita Racing is the exclusive <strong>combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka</strong>. This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working on the development of racing grade vehicles for various competitions across India.<a href=http://velocitaracing.github.io/#about> Click here </a> to know more.</p>"
+                }
+              }, {
+                "@type": "Question",
+                "name": "When does the recruitment process at velocita begin?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Recruitment process usually takes place at the start of the season."
+                }
+              }, {
+                "@type": "Question",
+                "name": "How many applicants get through the selection process?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Number of selected applicants varies each season based on requirement."
+                }
+              }, {
+                "@type": "Question",
+                "name": "Where does Velocita Racing participate?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Last Race: Formula Bharat 2021"
+                }
+              }, {
+                "@type": "Question",
+                "name": "How can I sponsor Velocita Racing?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text":"You can sponsor us by <strong>providing us parts</strong>, <strong>help in manufacturing</strong>, <strong>monetary funds</strong>, <strong>logistic help</strong> and many more."}
+                }]
+            }
+            </script>
      
 
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
