--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -46,6 +46,23 @@
                    "https://www.youtube.com/velocitaracing"]
         }</script>
      
+        <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [{
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Velocita Racing",
+              "item": "https://velocitaracing.github.io"
+            },{
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Crowdfunding",
+              "item": "https://velocitaracing.github.io/crowdfunding"
+            }
+          }
+      </script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
