--- a/team/index.html
+++ b/team/index.html
@@ -45,7 +45,24 @@
                    "https://twitter.com/RacingVelocita",
                    "https://www.youtube.com/velocitaracing"]
         }</script>
-     
+        
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Velocita Racing",
+                "item": "https://velocitaracing.github.io"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Team",
+                "item": "https://velocitaracing.github.io/team"
+              }
+            }
+        </script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
