--- a/index.html
+++ b/index.html
@@ -64,13 +64,56 @@
            "postalCode": "560054",
            "addressCountry": "India"
         },
-        
+
+       
         "sameAs": ["https://facebook.com/velocitaracing",
                    "https://instagram.com/officialvelocitaracing",
                    "https://www.linkedin.com/company/velocitaracing",
                    "https://twitter.com/RacingVelocita",
                    "https://www.youtube.com/velocitaracing"]
         }</script>
+
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "FAQPage",
+              "mainEntity": [{
+                "@type": "Question",
+                "name": "What does Velocita Racing do? ",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Velocita Racing is the exclusive <strong>combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka</strong>. This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working on the development of racing grade vehicles for various competitions across India.<a href=http://velocitaracing.github.io/#about> Click here </a> to know more.</p>"
+                }
+              }, {
+                "@type": "Question",
+                "name": "When does the recruitment process at velocita begin?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Recruitment process usually takes place at the start of the season."
+                }
+              }, {
+                "@type": "Question",
+                "name": "How many applicants get through the selection process?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Number of selected applicants varies each season based on requirement."
+                }
+              }, {
+                "@type": "Question",
+                "name": "Where does Velocita Racing participate?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Last Race: Formula Bharat 2021"
+                }
+              }, {
+                "@type": "Question",
+                "name": "How can I sponsor Velocita Racing?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text":"You can sponsor us by <strong>providing us parts</strong>, <strong>help in manufacturing</strong>, <strong>monetary funds</strong>, <strong>logistic help</strong> and many more."}
+                }]
+            }
+            </script>
 
     <meta name="thumbnail" content="https://velocitaracing.github.io/IMAGES/HOME/VR%20new%20logo.png" />
     <link rel="shortcut icon" href="favicon/favicon-32x32.png">
