--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </script>
 
     <meta name="thumbnail" content="https://velocitaracing.github.io/favicon/favicon-96x96.png" />
-    <link rel="shortcut icon" href="favicon/favicon-32x32.png">
+    <link rel="shortcut icon" href="favicon/android-icon-48x48.png">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
