--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             }
             </script>
 
-    <meta name="thumbnail" content="https://velocitaracing.github.io/favicon/favicon-96x96.png" />
+    <meta name="thumbnail" content="https://velocitaracing.github.io/favicon/android-icon-96x96" />
     <link rel="shortcut icon" href="favicon/android-icon-48x48.png">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 
