--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google-site-verification" content="7MLHgVxXAzBAyVZ4rvrDndYWsL5r78e4nTk47bFqGoc" />
     <!-- <meta name="google-site-verification" content="VPMtUxObJwMZ7-1zTe02kr4DbcdJKVzxqxDzZlK2M2E" /> -->
     <meta name="google-site-verification" content="O-xUiNInFXDQSB7JbiKJwwWByGinrk1pdWw6mB9g-Jo" />
+    <meta name="facebook-domain-verification" content="dizf61a6v24igu196esnxe6o4cj32s" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!-- <meta name="google-site-verification" content="jSxRZhkAjau6jO_zccxioL7sHsvOkoh_ZUU8KXp6cn0" /> -->
