--- a/404.html
+++ b/404.html
@@ -264,22 +264,22 @@
     <section id="home">
         <div class="container">
             <div class="heading">
-                <h1>sorry</h1>
+                <h1>Sorry, Nothings here.</h1>
                 <div class="underline">
                     <span class="curve"><span class="inner-circle"></span></span>
                     <span class="side-line insi-side-line"></span>
                 </div>
-                <span>nothings here</span>
+                <span></span>
                 <!-- <button class="primaryButton">learn more</button> -->
             </div> 
             <div class="blue-box-container">
-                <div class="blue-box">
-                    <!-- <div class="underline"></div>
+                <!-- <div class="blue-box">
+                    <div class="underline"></div>
                     <div class="title"><span>What's new</span></div>
                     <div class="info"><p>Hey &#128400 !<br><br>We've switched to a new theme, 
                         let us know your thoughts on this!<br><br>Click on feedback to share your thoughts.</p></div>
-                    <button>Feedback</button> -->
-                </div>
+                    <button>Feedback</button>
+                </div> -->
             </div>
         </div>
 
