--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                     </div>
                     <div class="underline"></div>
                     <ul>
-                        <li><a href="https://velocitaracing.github.io/#sponsors">About us</a></li>
+                        <li><a href="https://velocitaracing.github.io/about">About us</a></li>
                         <li><a href="https://velocitaracing.github.io/#sponsors/team">Team 2021</a></li>
                         <li><a href="https://velocitaracing.github.io/#exp-careers">Careers</a></li>
                         <li><a href="https://velocitaracing.github.io/#joinus">Recruitment 2021</a></li>
