--- a/index.html
+++ b/index.html
@@ -294,9 +294,10 @@
                     </ul>
                 </li>
                 <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-call-male-96.png" alt="">contact</span></a></li>
+                <span class="mob-nav-box-two">version 3.1</span>
             </ul>
-            <!-- <span class="mob-nav-box-one"></span>
-            <span class="mob-nav-box-two">version 3.1</span> -->
+            <!-- <span class="mob-nav-box-one"></span> -->
+            <!-- <span class="mob-nav-box-two">version 3.1</span> -->
         </div>
         
         <div id="burger" class="burger">
@@ -327,7 +328,7 @@
                     <div class="title"><span>What's new</span></div>
                     <div class="info"><p>Hey &#128400 !<br><br>We've switched to a new theme, 
                         let us know your thoughts on this!<br><br>Click on feedback to share your thoughts.</p></div>
-                    <button>Feedback</button>
+                    <button id="load">Feedback</button>
                 </div>
             </div>
         </div>
@@ -883,9 +884,9 @@
                     <div class="underline"></div>
                     <ul>
                         <li><a href="https://velocitaracing.github.io/about">About us</a></li>
-                        <li><a href="https://velocitaracing.github.io/#sponsors/team">Team 2021</a></li>
-                        <li><a href="https://velocitaracing.github.io/#exp-careers">Careers</a></li>
-                        <li><a href="https://velocitaracing.github.io/#joinus">Recruitment 2021</a></li>
+                        <li><a href="https://velocitaracing.github.io/team">Team 2021</a></li>
+                        <li><a href="https://velocitaracing.github.io/careers">Careers</a></li>
+                        <li><a href="https://velocitaracing.github.io/careers">Recruitment 2021</a></li>
                         <li><a href="javascript:void(0);">Events</a></li>
                         <li><a href="javascript:void(0);">Crowd Fuding</a></li>
                         <li><a href="javascript:void(0);">Downloads</a></li>
@@ -960,6 +961,8 @@
         <!-- Scroll Top on Page Refresh -->
         <!-- <script src="./src/js/refresh.js"></script> -->
 
+        <!-- Testing -->
+        <script src="./src/js/test.js"></script>
       
 </body>
 </html>
