--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </ul>
                 </li>
                 <li><a class="navlink-border click-link" href=""><span class="main-link"><img class="main-nav-icon" src="./src/assets/Navicons/icons8-call-male-96.png" alt="">contact</span></a></li>
-                <span class="mob-nav-box-two">version 3.1</span>
+                <!-- <span class="mob-nav-box-two">version 3.1</span> -->
             </ul>
             <!-- <span class="mob-nav-box-one"></span> -->
             <!-- <span class="mob-nav-box-two">version 3.1</span> -->
