--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -125,7 +125,7 @@
                         <span class="sub-nav-heading">know us</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="/about">
+                            <a class="click-link" href="../about">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-about-100.png" alt="">
                                 <span class="sub-main">
                                    <span>about us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -134,7 +134,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../team">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-team-96.png" alt="">
                                 <span class="sub-main">
                                    <span>team 2021<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -143,7 +143,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../team">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-calendar-100.png" alt="">
                                 <span class="sub-main">
                                    <span>team all seasons<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -159,7 +159,7 @@
                         <span class="sub-nav-heading">careers at velocita</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-career-ladder-96.png" alt="">
                                 <span class="sub-main">
                                    <span>student careers<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -168,7 +168,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-apply-96.png" alt="">
                                 <span class="sub-main">
                                    <span>recruitment<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -177,7 +177,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-resume-96.png" alt="">
                                 <span class="sub-main">
                                    <span>openings<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -193,7 +193,7 @@
                         <span class="sub-nav-heading">partner progarm</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../sponsors">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-crowdfunding-100.png" alt="">
                                 <span class="sub-main">
                                    <span>our sponsors<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -202,7 +202,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../sponsors">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-helping-hand-100.png" alt="">
                                 <span class="sub-main">
                                    <span>partner with us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -219,7 +219,7 @@
                         <span class="sub-nav-heading">more from velocita</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../blog">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-blog-logo-96.png" alt="">
                                 <span class="sub-main">
                                    <span>blog<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -228,7 +228,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="javascript:void(0);">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-google-podcasts-100.png" alt="">
                                 <span class="sub-main">
                                    <span>podcast<i class="sub-main-arrow fa fa-angle-right"></i></span>
