--- a/team/index.html
+++ b/team/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <!-- Site Verification -->
-    <meta name="google-site-verification" content="7MLHgVxXAzBAyVZ4rvrDndYWsL5r78e4nTk47bFqGoc" />
-    <meta name="google-site-verification" content="O-xUiNInFXDQSB7JbiKJwwWByGinrk1pdWw6mB9g-Jo" />
-    <meta name="facebook-domain-verification" content="dizf61a6v24igu196esnxe6o4cj32s" />
 
     <!-- Fb Pages -->
-    <meta property="fb:pages" content="1579413715688758" />
 
     <!-- Site Details -->
     <title>Our Team | Velocita Racing</title>
@@ -125,7 +121,7 @@
                         <span class="sub-nav-heading">know us</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="/about">
+                            <a class="click-link" href="../about">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-about-100.png" alt="">
                                 <span class="sub-main">
                                    <span>about us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -134,7 +130,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../team">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-team-96.png" alt="">
                                 <span class="sub-main">
                                    <span>team 2021<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -143,7 +139,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../team">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-calendar-100.png" alt="">
                                 <span class="sub-main">
                                    <span>team all seasons<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -159,7 +155,7 @@
                         <span class="sub-nav-heading">careers at velocita</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-career-ladder-96.png" alt="">
                                 <span class="sub-main">
                                    <span>student careers<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -168,7 +164,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-apply-96.png" alt="">
                                 <span class="sub-main">
                                    <span>recruitment<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -177,7 +173,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../careers">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-resume-96.png" alt="">
                                 <span class="sub-main">
                                    <span>openings<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -193,7 +189,7 @@
                         <span class="sub-nav-heading">partner progarm</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../sponsors">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-crowdfunding-100.png" alt="">
                                 <span class="sub-main">
                                    <span>our sponsors<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -202,7 +198,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../sponsors">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-helping-hand-100.png" alt="">
                                 <span class="sub-main">
                                    <span>partner with us<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -219,7 +215,7 @@
                         <span class="sub-nav-heading">more from velocita</span>
                         <span class="sub-nav-underline underline"></span>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="../blog">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-blog-logo-96.png" alt="">
                                 <span class="sub-main">
                                    <span>blog<i class="sub-main-arrow fa fa-angle-right"></i></span>
@@ -228,7 +224,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="click-link" href="">
+                            <a class="click-link" href="javascript:void(0);">
                                 <img class="nav-icon" src="../src/assets/Navicons/icons8-google-podcasts-100.png" alt="">
                                 <span class="sub-main">
                                    <span>podcast<i class="sub-main-arrow fa fa-angle-right"></i></span>
