--- a/team/index.html
+++ b/team/index.html
@@ -83,8 +83,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- SwiperJS -->
-    <script src="./src/js/swipermin.js"></script>
-    <link rel="stylesheet" href="./src/utilities/swipermin.css">
+    <script src="../src/js/swipermin.js"></script>
+    <link rel="stylesheet" href="../src/utilities/swipermin.css">
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
