--- a/index.html
+++ b/index.html
@@ -911,7 +911,11 @@
                     <p class="heading">STAY CONNECTED</p>
                     <div class="underline"></div>
                     <!-- <p class="about">newsletter</p> -->
-                    <button id="subscribe-button" class="secondaryButton">SUBSCRIBE</button>
+                    <button id="support" class="secondaryButton">SUBSCRIBE</button>
+                        <div class="subs">
+                            <input id="inp" type="text" placeholder="Enter Email ID">
+                            <button id="tick">&#10004;</button>
+                        </div>
                 </div>
                 <div class="btns">
                     <p class="heading">SUPPORT US</p>
