--- a/404.html
+++ b/404.html
@@ -99,6 +99,9 @@
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/body.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/sections/home.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/bluebox.css">
+
+    <!-- Font   Awesome -->
+    <link rel="stylesheet" href="https://velocitaracing.github.io/src/utilities/fontAwesome.css">
    
    
 
