--- a/404.html
+++ b/404.html
@@ -94,6 +94,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
    
     <!-- CSS -->
+    <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/preloader.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/navbar.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/footer.css">
     <link rel="stylesheet" href="https://velocitaracing.github.io/src/style/components/body.css">
@@ -107,6 +108,12 @@
 
 </head>
 <body>
+
+    <!-- Preloader -->
+
+        <div id="preloader">
+            <div id="status">&nbsp;</div>
+        </div>
 
     <!-- Navbar -->
 
@@ -376,6 +383,9 @@
     </script>
 
     <!-- Scripts -->
+
+        <!-- Preloader -->
+        <script src="https://velocitaracing.github.io/src/js/preloader.js"></script>
 
         <!-- Mobile Navbar -->
         <script src="https://velocitaracing.github.io/src/js/mobnav.js"></script>
